--- a/map/map.html
+++ b/map/map.html
@@ -34,7 +34,7 @@
   </script>
 
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz0cHDaq86hNmoqY9Mg1DB-tsTjPs5EnY&callback=initMap"
+    src="https://maps.googleapis.com/maps/api/js?key=/* Your API */-tsTjPs5EnY&callback=initMap"
     type="text/javascript"></script>
 </body>
 
